differentiate legal and non-legal driver compliances with pre-defined templates [RPII-73]

--- a/app/views/driver_compliances/create.js.erb
+++ b/app/views/driver_compliances/create.js.erb
@@ -1,2 +1,6 @@
 $('#modal-dialog').modal('hide');
-$("<%= j (render @driver_compliance) %>").hide().appendTo('#driver_compliances-table tbody').slideDown('slow');
+<% if @driver_compliance.legal?%>
+  $("<%= j (render @driver_compliance) %>").hide().appendTo('#legal_driver_compliances-table tbody').slideDown('slow');
+<% else %>
+  $("<%= j (render @driver_compliance) %>").hide().appendTo('#driver_compliances-table tbody').slideDown('slow');
+<% end %>
