--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,5 +1,5 @@
 <% google_maps_callbacks = [] %>
-<%= render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: 'vehicles-drivers-users' %>
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: 'provider' %>
 <div id="page-header" class="clearfix">
   <h1><%= translate_helper("show_provider_heading", provider: @provider.name) %></h1>
 </div>
@@ -105,6 +105,10 @@
 
 <h2 class="section-header"><%=translate_helper("configure_provider_driver_requirement_templates")%></h2>
 <%=link_to link_to translate_helper("provider_driver_requirement_templates_link_text"), driver_requirement_templates_path(provider_id: current_provider_id)%>
+<hr />
+
+<h2 class="section-header"><%=translate_helper("configure_provider_lookup_tables")%></h2>
+<%=link_to link_to translate_helper("provider_lookup_tables_link_text"), provider_lookup_tables_path%>
 <hr />
 
 <h2 class="section-header"><%=translate_helper("configure_provider_operating_hours")%></h2>
