--- a/app/views/driver_requirement_templates/edit.html.haml
+++ b/app/views/driver_requirement_templates/edit.html.haml
@@ -1,4 +1,4 @@
-= render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: 'admin'
+= render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: (params[:provider_id].blank? ? 'admin' : 'provider')
 #page-header.row
   .col-sm-12.col-md-6
     %h1= translate_helper("edit_driver_requirement_template_heading")
