--- a/app/views/provider_lookup_tables/_table.html.haml
+++ b/app/views/provider_lookup_tables/_table.html.haml
@@ -1,15 +1,9 @@
 - is_code_column_configured = table.code_column_name.present?
 - is_description_column_configured = table.description_column_name.present?
 .col-sm-12{style: 'padding: 10px 0px;'}
-  - if current_user.super_admin?
-    - if table.add_value_allowed
-      = render partial: 'add_value_button', locals: {table: table, is_provider_only: false}
-    - if table.edit_value_allowed
-      = render partial: 'edit_value_button', locals: {table: table, is_provider_only: false}
-    - if table.delete_value_allowed
-      = render partial: 'delete_value_button', locals: {table: table, is_provider_only: false}
-  = render partial: 'hide_value_button', locals: {table: table}
-  = render partial: 'show_value_button', locals: {table: table}
+  = render partial: 'lookup_tables/add_value_button', locals: {table: table, is_provider_only: true}
+  = render partial: 'lookup_tables/edit_value_button', locals: {table: table, is_provider_only: true}
+  = render partial: 'lookup_tables/delete_value_button', locals: {table: table, is_provider_only: true}
 
 %table.table.table-condensed.table-striped.table-bordered.table-hover#lookupTable
   %thead
@@ -22,10 +16,8 @@
       %th
         = table.description_column_name.titleize
   %tbody
-    - hidden_ids = HiddenLookupTableValue.hidden_ids table.name, current_provider_id
-    - table.values.each do |item|
-      - row_class = hidden_ids.index(item.id) ? 'hidden-lookup-value' : ''
-      %tr{data: {"model-id": item.id}, class: row_class}
+    - table.values(current_provider_id).each do |item|
+      %tr{data: {"model-id": item.id}}
         %td
           = item[table.value_column_name]
         - if is_code_column_configured
@@ -47,21 +39,6 @@
       $('#deleteLookupTableValue').prop('disabled', 'disabled');
     };
 
-    var hideVisibilityButtons = function() {
-      $('#showLookupTableValue').hide();
-      $('#hideLookupTableValue').hide();
-    };
-
-    var enableShowButton = function() {
-      $('#showLookupTableValue').show();
-      $('#hideLookupTableValue').hide();
-    };
-
-    var enableHideButton = function() {
-      $('#hideLookupTableValue').show();
-      $('#showLookupTableValue').hide();
-    };
-
     var table = $('#lookupTable').dataTable();
 
     // select & deselect table row
@@ -69,18 +46,11 @@
       if ( $(this).hasClass('selected') ) {
         $(this).removeClass('selected');
         disableEditingButtons();
-        hideVisibilityButtons();
       }
       else {
         table.$('tr.selected').removeClass('selected');
         $(this).addClass('selected');
         enableEditingButtons();
-
-        if($(this).hasClass('hidden-lookup-value')) {
-          enableShowButton();
-        } else {
-          enableHideButton();
-        }
       }
     } );
     
