--- a/app/views/drivers/index.html.haml
+++ b/app/views/drivers/index.html.haml
@@ -12,8 +12,8 @@
       %label
         %input#show_active_only{type: 'checkbox'}
           = translate_helper(:show_inactive)
-  .col-sm-12.col-md-6
-    %table#documents-table.table.table-striped.table-bordered
+  .col-sm-12
+    %table#drivers_table.table.table-striped.table-bordered
       %thead
         %tr
           %th.col-sm-4= translate_helper("driver_form_name")
@@ -31,6 +31,7 @@
 
 :javascript
   $(function() {
+    $('#drivers_table').dataTable();
     $('#show_active_only').prop('checked', #{params[:show_inactive] == 'true'});
     $('#show_active_only').change(function() {
       window.location.href = "#{drivers_path}?show_inactive=" + $(this).is(':checked')
