Concert driver requirement templates table to search-able and sortable datatables

--- a/app/views/driver_requirement_templates/index.html.haml
+++ b/app/views/driver_requirement_templates/index.html.haml
@@ -7,7 +7,7 @@
       = link_to translate_helper("new_driver_requirement_template_link_text"), new_driver_requirement_template_path(provider_id: params[:provider_id]), class: "btn action-button"
 .row
   .col-sm-12
-    %table.table.table-striped.table-bordered
+    %table.table.table-striped.table-bordered#driver_requirement_templates_table
       %thead
         %tr
           %th.col-sm-4= translate_helper("driver_requirement_template_name")
@@ -17,3 +17,8 @@
           %tr
             %td{:colspan => "2"}= translate_helper("driver_requirement_templates_empty")
         = render partial: 'driver_requirement_template', collection: @driver_requirement_templates
+
+:javascript
+  $(function() {
+    $('#driver_requirement_templates_table').dataTable();
+  });
