--- a/app/views/users/_add_verification_question_dialog.html.haml
+++ b/app/views/users/_add_verification_question_dialog.html.haml
@@ -20,4 +20,4 @@
             .col-sm-3
               = f.label :answer, translate_helper(:verification_question_answer) 
             .col-sm-9
-              = f.text_area :answer, class: 'form-control', required: true
+              = f.text_field :answer, class: 'form-control', required: true
