--- a/app/views/driver_compliances/update.js.erb
+++ b/app/views/driver_compliances/update.js.erb
@@ -2,3 +2,7 @@ $('#modal-dialog').modal('hide');
 var $new_row = $("<%= j (render @driver_compliance) %>").hide();
 $('#driver_compliances-table .driver_compliance-<%= @driver_compliance.id %>').slideUp('fast').replaceWith($new_row);
 $new_row.slideDown('slow');
+
+<% if @is_newly_completed && @driver_compliance.driver_requirement_template.try(:reoccuring?)%>
+  <%= render 'ask_for_reoccuring', driver: @driver, legal: @driver_compliance.legal?, driver_requirement_template_id: @driver_compliance.driver_requirement_template_id %>
+<% end %>
