--- a/app/views/driver_requirement_templates/_driver_requirement_template.html.haml
+++ b/app/views/driver_requirement_templates/_driver_requirement_template.html.haml
@@ -2,4 +2,6 @@
   %td
     = link_to driver_requirement_template.name, driver_requirement_template_path(driver_requirement_template, provider_id: params[:provider_id])
   %td
-    = driver_requirement_template.legal ? translate_helper('yes') : ''
+    = driver_requirement_template.legal? ? translate_helper('yes') : ''
+  %td
+    = driver_requirement_template.reoccuring? ? translate_helper('yes') : ''
