--- a/app/views/driver_requirement_templates/_form.html.haml
+++ b/app/views/driver_requirement_templates/_form.html.haml
@@ -10,10 +10,14 @@
   .row
     .col-sm-12.col-md-6
       .form-group.col-sm-12
-        = f.label :name, translate_helper("driver_requirement_template_form_name"), class: "col-md-2 control-label"
+        = f.label :name, translate_helper("driver_requirement_template_name_field_label"), class: "col-md-2 control-label"
         .col-md-10
           = f.text_field :name, class: "form-control", disabled: @readonly
       .form-group.col-sm-12
-        = f.label :legal, translate_helper("driver_requirement_template_legal"), class: "col-md-2 control-label"
+        = f.label :legal, translate_helper("driver_requirement_template_legal_field_label"), class: "col-md-2 control-label"
         .col-sm-10
           = f.check_box :legal, disabled: @readonly
+      .form-group.col-sm-12
+        = f.label :reoccuring, translate_helper("driver_requirement_template_reoccuring_field_label"), class: "col-md-2 control-label"
+        .col-sm-10
+          = f.check_box :reoccuring, disabled: @readonly
