--- a/app/views/driver_requirement_templates/index.html.haml
+++ b/app/views/driver_requirement_templates/index.html.haml
@@ -12,6 +12,7 @@
         %tr
           %th.col-sm-4= translate_helper("driver_requirement_template_name")
           %th.col-sm-2= translate_helper("driver_requirement_template_legal")
+          %th.col-sm-2= translate_helper("driver_requirement_template_reoccuring")
       %tbody
         - if @driver_requirement_templates.empty?
           %tr
