--- a/app/views/driver_compliances/destroy.js.erb
+++ b/app/views/driver_compliances/destroy.js.erb
@@ -1,1 +1,5 @@
+<% if @driver_compliance.legal? %>
+$('#legal_driver_compliances-table .driver_compliance-<%= @driver_compliance.id %>').fadeOut(350).delete();
+<% else %>
 $('#driver_compliances-table .driver_compliance-<%= @driver_compliance.id %>').fadeOut(350).delete();
+<% end %>
