Have checkbox to show/hide past compliance events

--- a/app/views/drivers/_non_legal_requirements_panel.html.haml
+++ b/app/views/drivers/_non_legal_requirements_panel.html.haml
@@ -1,19 +1,20 @@
 .panel.panel-primary
-  .panel-heading= translate_helper("driver_compliances_heading")
-  %table#driver_compliances-table.table.table-striped.table-condensed
-    %thead
-      %tr
-        %th.col-sm-3= translate_helper("driver_compliance_form_due_date")
-        %th= translate_helper("driver_compliance_form_event")
-        %th.col-sm-3= translate_helper("driver_compliance_form_compliance_date")
-        - unless @readonly
-          %th.col-sm-1
-    %tbody
-      - if @readonly and @driver.driver_compliances.non_legal.empty?
-        %tr
-          %td{:colspan => "3"}= translate_helper("driver_compliances_empty")
-      = render partial: 'driver_compliances/driver_compliance', collection: @driver.driver_compliances.non_legal.default_order
+  .panel-heading
+    = translate_helper("driver_compliances_heading")
+  .panel-body{style: 'padding: 0px;'}
+    .col-sm-12
+      .checkbox.pull-right
+        %label
+          %input#show_past_non_legal{type: 'checkbox'}
+            = translate_helper(:show_past)
+    = render 'driver_compliances_table', driver_compliances: @driver.driver_compliances.incomplete.non_legal.default_order, legal: false
   - unless @readonly
     .panel-footer
       .clearfix
         = link_to translate_helper("driver_compliances_add_link_title"), new_driver_driver_compliance_path(@driver), class: "btn action-button pull-right", remote: true
+:javascript
+  $(function() {
+    $('#show_past_non_legal').change(function() {
+      $.ajax({url: "#{driver_driver_compliances_path(@driver)}?readonly=#{@readonly}&show_past=" + $(this).is(':checked')});
+    });
+  });
