--- a/app/views/document_associations/_form_panel.html.haml
+++ b/app/views/document_associations/_form_panel.html.haml
@@ -1,95 +1,38 @@
 .panel.panel-primary
   .panel-heading= label_tag translate_helper("document_associations_documents_heading")
-  -# %table#document-associations.table.table-striped
-  -#   %thead
-  -#     %tr
-  -#       %th{:width => "96%"}= translate_helper("document_associations_form_document_label")
-  -#       %th{:width => "4%"}
-  -#   %tbody
-  -#     - if documents.empty?
-  -#       %tr
-  -#         %td{:colspan => "2"} No documents have been uploaded yet.
-  -#     - else
-  -#       = f.fields_for :document_associations, :wrapper => false do |f|
-  -#         = render partial: "document_associations/document_association_fields_for_associable", locals: {f: f, documents: documents}
   .panel-body.form-horizontal
-    -# = @parent.inspect
-    -# = @document.inspect
-    -# = @driver.inspect
-    -# = f.fields_for :document_associations, :wrapper => false do |f|
-    -#   = render partial: "document_associations/document_association_fields_for_associable", locals: {f: f, documents: documents}
-    -# 
-    -# = f.fields_for :document_associations, @driver_history.document_associations.build do |doc_assn_f|
-    -#   
-    -#   =doc_assn_f.fields_for :document, doc_assn_f.object.build_document do |doc_f|
-    -#   
-    -#     .form-group
-    -#       = doc_f.label :description, translate_helper("document_form_description"), class: "col-md-3 control-label"
-    -#       .col-md-9
-    -#         = doc_f.text_field :description, class: "form-control"
-    -#     .form-group
-    -#       = doc_f.label :document, translate_helper("document_form_file_name"), class: "col-md-3 control-label"
-    -#       .col-md-9
-    -#         = doc_f.file_field :document, class: "form-control"
-    -#     .form-group
-    -#       = doc_f.label :documentable_type, class: "col-md-3 control-label"
-    -#       .col-md-9
-    -#         = doc_f.text_field :documentable_type, class: "form-control"
+    %table#associated-documents.table.table-striped
+      %thead
+        %tr
+          %th id
+          %th Description
+          %th File
+          %th
+      %tbody
+        - @driver_history.documents.each do |doc|
+          =render partial: 'document_associations/document_row', locals: {f: f, document: doc}
+        =render partial: 'document_associations/document_row', locals: {f: f}
+    .btn.btn-primary.add-document-row.pull-right Add Document
     
-    .form-group
-      = f.label :description, translate_helper("document_form_description"), class: "col-md-3 control-label"
-      .col-md-9
-        = f.text_field :description, class: "form-control", value: ""
-    .form-group
-      = f.label :document, translate_helper("document_form_file_name"), class: "col-md-3 control-label"
-      .col-md-9
-        = f.file_field :document, class: "form-control"
-
+:javascript
+  $(document).ready(function() {
+  
+    // Set _destroy to true and hide the row
+    var deleteDocumentRow = function() {
+      var row = $(this).closest('tr');
+      row.find('input.destroy-document').prop('checked', true);
+      row.addClass('hidden');
+    }
     
-      -# = doc_f.label :description
-      -# = doc_f.text_field :description
-      -# 
-      -# = doc_f.label :document
-      -# = doc_f.file_field :document
+    // Add a new document row on click of add-document-row button
+    $('.add-document-row').click(function() {
+      console.log($('table#associated-documents tr:last').after(
+        "#{escape_javascript(render partial: 'document_associations/document_row', locals: {f: f})}"
+      ).find('.delete-document-row'));
+      
+    });
     
-    -# = form_for [@driver, @document], html: { multipart: true } do |f|
-    -#   - if @document.errors.any?
-    -#     .panel.panel-danger
-    -#       .panel-heading= translate_helper("document_form_error", count: @document.errors.count)
-    -#       .panel-body
-    -#         %ul
-    -#           - @document.errors.full_messages.each do |msg|
-    -#             %li= msg
-    -#   .row
-    -#     .col-md-12
-    -#       .panel.panel-primary
-    -#         .panel-body.form-horizontal
-    -#           .form-group
-    -#             = f.label :description, translate_helper("document_form_description"), class: "col-md-3 control-label"
-    -#             .col-md-9
-    -#               = f.text_field :description, class: "form-control"
-    -#           .form-group
-    -#             = f.label :document, translate_helper("document_form_file_name"), class: "col-md-3 control-label"
-    -#             .col-md-9
-    -#               = f.file_field :document, class: "form-control", html: { "aria-describedby" => (@document.persisted? ? "document_form_file_name_current" : "") }
-    -#               - if @document.persisted?
-    -#                 %span#document_form_file_name_current.help-block
-    -#                   = translate_helper("document_form_file_name_currently")
-    -#                   "#{link_to @document.document_file_name, @document.document.url, target: "_blank"}"
-    -#           - if @document.persisted?
-    -#             .form-group
-    -#               = label_tag "", translate_helper("document_form_file_size"), class: "col-md-3 control-label"
-    -#               .col-md-9
-    -#                 %p.form-control-static= number_to_human_size @document.document_file_size
-    -#             .form-group
-    -#               = label_tag "", translate_helper("document_form_upload_date"), class: "col-md-3 control-label"
-    -#               .col-md-9
-    -#                 %p.form-control-static= @document.document_updated_at.to_s(:long)
-    -# .panel-footer
-    -#   .row.form-actions= f.submit translate_helper("document_form_submit"), class: "btn action-button"
-
-  -# - unless documents.empty?
-  -#   .panel-footer
-  -#     .clearfix
-  -#       = f.link_to_add translate_helper("document_associations_form_add_link_title"), :document_associations, data: { target: "#document-associations" }, class: "btn action-button pull-right"
-/ END .panel
+    // Delete row on click of delete-document-row button
+    $('.delete-document-row').click(deleteDocumentRow);
+    
+  });
