--- a/app/views/drivers/_form.html.haml
+++ b/app/views/drivers/_form.html.haml
@@ -81,7 +81,7 @@
               - if @readonly and @driver.documents.empty?
                 %tr
                   %td{:colspan => "4"}= translate_helper("driver_documents_empty")
-              = render partial: 'documents/document', collection: @driver.documents.default_order
+              = render partial: 'documents/document', collection: @driver.documents.unassociated.default_order
         / END .panel
         .panel.panel-primary
           .panel-heading= translate_helper("driver_histories_heading")
