--- a/app/views/document_associations/_document_row.html.haml
+++ b/app/views/document_associations/_document_row.html.haml
@@ -1,7 +1,7 @@
 -document = local_assigns[:document] || Document.new
 =f.fields_for :documents, document, wrapper: false do |doc_f|
   %tr.document-row
-    %td
+    %td.hidden
       =doc_f.hidden_field :id, value: document.id
     %td
       =doc_f.text_field :description, value: document.description
