--- a/app/views/driver_histories/_driver_history.html.haml
+++ b/app/views/driver_histories/_driver_history.html.haml
@@ -9,4 +9,9 @@
         %i.fa.fa-paperclip{'aria-hidden' => true}
   - unless @readonly
     %td
-      = link_to "X", polymorphic_path([driver_history.driver, driver_history]), remote: true, method: :delete, data: { confirm: translate_helper("driver_history_delete_confirm") }, class: "btn btn-danger btn-sm pull-right"
+      = link_to polymorphic_path([driver_history.driver, driver_history]), 
+          remote: true, 
+          method: :delete, 
+          data: { confirm: translate_helper("driver_history_delete_confirm") }, 
+          class: "btn btn-danger btn-sm pull-right" do
+        %i.fa.fa-remove{'aria-hidden' => true}
