--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -107,6 +107,10 @@
 <%=link_to link_to translate_helper("provider_driver_requirement_templates_link_text"), driver_requirement_templates_path(provider_id: current_provider_id)%>
 <hr />
 
+<h2 class="section-header"><%=translate_helper("configure_provider_vehicle_maintenance_types")%></h2>
+<%=link_to link_to translate_helper("provider_vehicle_maintenance_types_link_text"), vehicle_maintenance_schedule_types_path%>
+<hr />
+
 <h2 class="section-header"><%=translate_helper("configure_provider_lookup_tables")%></h2>
 <%=link_to link_to translate_helper("provider_lookup_tables_link_text"), provider_lookup_tables_path%>
 <hr />
