--- a/app/views/document_associations/_document_row.html.haml
+++ b/app/views/document_associations/_document_row.html.haml
@@ -7,9 +7,9 @@
       =doc_f.text_field :description, value: document.description
     %td
       -if document.document_file_name
-        =document.document_file_name
+        =link_to document.document_file_name, document.document.url, target: :blank
       -else
-        =doc_f.file_field :document#, multiple: true
+        =doc_f.file_field :document
     %td
       .btn.btn-danger.btn-sm.delete-document-row
         %i.fa.fa-remove{'aria-hidden' => true}
