--- a/app/views/vehicle_warranties/_vehicle_warranty.html.haml
+++ b/app/views/vehicle_warranties/_vehicle_warranty.html.haml
@@ -7,4 +7,9 @@
       = link_to_unless @readonly, vehicle_warranty.description, polymorphic_path([vehicle_warranty.vehicle, vehicle_warranty], action: :edit), remote: true
   - unless @readonly
     %td
-      = link_to "X", polymorphic_path([vehicle_warranty.vehicle, vehicle_warranty]), remote: true, method: :delete, data: { confirm: translate_helper("vehicle_warranty_delete_confirm") }, class: "btn btn-danger btn-sm pull-right"
+      = link_to polymorphic_path([vehicle_warranty.vehicle, vehicle_warranty]), 
+          remote: true, 
+          method: :delete, 
+          data: { confirm: translate_helper("vehicle_warranty_delete_confirm") }, 
+          class: "btn btn-danger btn-sm pull-right" do
+        %i.fa.fa-remove{'aria-hidden' => true}
