--- a/app/views/vehicle_maintenance_compliances/_vehicle_maintenance_compliance.html.haml
+++ b/app/views/vehicle_maintenance_compliances/_vehicle_maintenance_compliance.html.haml
@@ -5,6 +5,8 @@
   %td
     %p.form-control-static
       = link_to_unless @readonly, vehicle_maintenance_compliance.event, polymorphic_path([vehicle_maintenance_compliance.vehicle, vehicle_maintenance_compliance], action: :edit), remote: true
+      - if vehicle_maintenance_compliance.documents.present?
+        %i.fa.fa-paperclip{'aria-hidden' => true}
   %td
     %p.form-control-static
       = vehicle_maintenance_compliance.compliance_date.try(:to_s, :long)
