Document Upload for Vehicle Maintenance Schedules

--- a/app/views/vehicle_maintenance_schedules/index.html.haml
+++ b/app/views/vehicle_maintenance_schedules/index.html.haml
@@ -11,6 +11,7 @@
         %tr
           %th= translate_helper("vehicle_maintenance_schedule_name")
           %th= translate_helper("vehicle_maintenance_schedule_mileage")
+          %th= translate_helper("vehicle_maintenance_schedule_document")
           %th
       %tbody
         = render partial: 'vehicle_maintenance_schedule', collection: @vehicle_maintenance_schedules
