Create recurring vehicle maintenance event

--- a/app/views/vehicle_maintenance_compliances/_javascript.js.erb
+++ b/app/views/vehicle_maintenance_compliances/_javascript.js.erb
@@ -1,13 +1,21 @@
 var schedule_mileages = <%= @vehicle_maintenance_schedules.pluck(:id, :mileage).to_h.to_json.html_safe || {}%>;
-var initial_mileage = <%= @vehicle.last_odometer_reading || 0%>;
+var last_compliance_mileage_per_schedule = <%= @vehicle.vehicle_maintenance_compliances.complete.group(:vehicle_maintenance_schedule_id).maximum(:compliance_mileage).to_json.html_safe || {}%>;
+var base_mileage = <%= @vehicle.last_odometer_reading || @vehicle.initial_mileage || 0 %>;
+
+function set_default_due_mileage(schedule_id) {
+  if(schedule_id) {
+    var mileage = schedule_mileages[schedule_id] || 0;
+    var last_compliance_mileage = last_compliance_mileage_per_schedule[schedule_id] || base_mileage;
+    $('#vehicle_maintenance_compliance_due_mileage').val(last_compliance_mileage + mileage);
+  }
+}
+
+set_default_due_mileage(<%= @vehicle_maintenance_compliance.vehicle_maintenance_schedule_id %>);
 
 $('#vehicle_maintenance_schedule').change(function() {
     var schedule_id = $(this).val();
-    if(schedule_id) {
-        var mileage = schedule_mileages[schedule_id] || 0;
-        $('#vehicle_maintenance_compliance_due_mileage').val(initial_mileage + mileage);
-        $('#vehicle_maintenance_compliance_event').val($(this).find('option:selected').text());
-    }
+    $('#vehicle_maintenance_compliance_event').val($(this).find('option:selected').text());
+    set_default_due_mileage(schedule_id);
 });
 
 $("#vehicle_maintenance_compliance_due_type").on("change", function() {
