--- a/app/views/vehicles/_compliance_events_panel.html.haml
+++ b/app/views/vehicles/_compliance_events_panel.html.haml
@@ -18,7 +18,7 @@
     .checkbox.pull-right
       %label
         %input#show_all_compliances{type: 'checkbox'}
-          %b= translate_helper(:show_all)
+          %b= translate_helper(:show_all_compliances)
   = render 'vehicle_maintenance_compliances_table', vehicle_maintenance_compliances: @vehicle.vehicle_maintenance_compliances.default_order
   - unless @readonly
     .panel-footer
