--- a/app/views/shared/_modal_dialog.html.erb
+++ b/app/views/shared/_modal_dialog.html.erb
@@ -1,5 +1,5 @@
 <% modal_id ||= "modal-dialog" %>
-<div id="<%= modal_id %>" class="modal fade" role="dialog" aria-hidden="true" tabindex="-1" aria-labelledby="modal-title">
+<div id="<%= modal_id %>" class="modal fade" role="dialog" aria-hidden="true" tabindex="-1" aria-labelledby="modal-title" data-backdrop="static" data-keyboard="false" }>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
